# ai-starter-pack-helper

./: pyproject.toml
ai_starter_pack_helper/: get_llm.py
