[tool.poetry]
name = "ai_starter_pack_helper"
version = "0.1.3"
description = ""
authors = ["LorAutumn <lorenz.herbst@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
