[tool.poetry]
name = "ai_starter_pack_helper"
version = "0.1.5"
description = ""
authors = ["LorAutumn <lorenz.herbst@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
